<resources>
    <!-- ACTIVITY TITLES -->
    <string name="title_activity_main_menu">Drive-LaB</string>
    <string name="title_activity_settings">Indstillinger</string>
    <string name="title_activity_map">Kort</string>
    <string name="title_activity_trip_list">Turliste</string>
    <string name="title_activity_trip_overview">Turoversigt</string>
    <!--<string name="title_activity_login">Login</string> -->
    <string name="title_activity_competition_list">Konkurrencer</string>
    <string name="title_activity_competition_overview">Overblik</string>

    <!-- LOGIN -->
    <string name="Authenticating">Logger ind&#8230;</string>
    <string name="AuthenticationFailed">Forkert email eller password</string>
    <string name="EmailError">Ugyldig email addresse</string>
    <string name="PasswordError">Ugyldigt password</string>
    <string name="EmailHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="LoginButtonTitle">Log ind</string>
    <string name="LoginStatus">LoginStatus</string>
    <string name="StoredEmail">StoredEmail</string>
    <string name="DefaultEmail">invalid@email.dk</string>
    <string name="LoginPreferences">LoginPreferences</string>

    <!-- MAIN MENU -->
    <string name="ActionBarSettingsTitle">Indstillinger</string>

    <string name="LogoDescription">Logo</string>

    <string name="TripButtonTitleStart">Start Tur</string>
    <string name="TripButtonTitleStop">Stop Tur</string>
    <string name="TripButtonTitleStopping">Afslutter tur</string>
    <string name ="TripStoppingText">Dette kan tage et par minutter</string>
    <string name="ActiveTripButtonTitle">Vis på kort</string>
    <string name="TripOverviewButtonTitle">Turliste</string>
    <string name="CompetitionsButtonTitle">Konkurrencer</string>

    <string name="UserIdNotSetToast">Sæt venligst dit bruger ID under indstillinger før du starter en tur</string>
    <string name="TripStartToast">Starter tur</string>
    <string name="TripStopToast">Stopper tur</string>
    <string name="OnBackPressedToast">Stop venligst tur inden afslutning</string>

    <string name="GPSDisabledDialogTitle">GPS ikke indstillet korrekt</string>
    <string name="GPSDisabledDialogText">Slå venligst GPS til med "Høj Præcision" før du starter din tur</string>
    <string name="GPSDisabledSettingsButtonText">Gå til Indstillinger</string>
    <string name="GPSDisabledCancelButtonText">Annuller</string>

    <string name="IMEIDialogTitle">Mangler tilladelse</string>
    <string name="IMEIDialogText">Drive-LaB kræver information om telefonen for at kunne fungere</string>
    <string name="IMEIRetryButtonText">Giv tilladelse</string>
    <string name="IMEICancelButtonText">Afslut</string>

    <string name="SendIMEIDialogTitle">Ingen forbindelse</string>
    <string name="SendIMEIDialogText">Drive-LaB kunne ikke oprette forbindelse til serveren</string>
    <string name="SendIMEIRetryButtonText">Prøv igen</string>
    <string name="SendIMEICancelButtonText">Afslut</string>

    <string name="IsGPSDialogOpen">IsGPSDialogOpen</string>
    <string name="IsTripProcessing">IsTripProcessing</string>
    <string name="IsTripActive">IsTripActive</string>
    <string name="UserPreferences">UserPreferences</string>
    <string name="CarIdStatus">CarIdStatus</string>
    <string name="StoredIMEI">StoredIMEI</string>
    <string name="StoredCarId">StoredCarId</string>

    <!-- LIVE MAP -->
    <string name="LiveDistanceText">%.1f km</string>
    <string name="LiveDistanceDefaultText">-,- km</string>
    <string name="LiveTimeTextFormat">HH:mm:ss</string>
    <string name="LiveTimeDefaultText">--:--:--</string>

    <!-- TRIP LIST -->
    <string name="TripTitle">Tur %d</string>
    <string name="TripCostText">%.2f Dkr</string>
    <string name="TripOptimalityText">%.0f%%</string>
    <string name="TripTimeTextFormat">HH:mm</string>
    <string name="TripTimeText">%1$s - %2$s</string>
    <string name="TripListEmptyText">Ingen ture kørt</string>
    <string name="TripListLoadErrorText">Kunne ikke indlæse ture</string>
    <string name="TripListRetryLoad">Prøv igen</string>
    <string name="TripListCancelLoad">Ignorer</string>
    <string name="TripDistanceText">%.1f km</string>
    <string name="CurrentTripTitle">Igangværende tur</string>
    <string name="CurrentTripDistanceText">%.1f km kørt</string>
    <string name="CurrentTripDistanceDefaultText">-,- km kørt</string>
    <string name="CurrentTripProcessingText">Tur afsluttet - Din score bliver udregnet</string>
    <string name="LoadingTripsText">Indlæser&#8230;</string>
    <string name="TripOverviewIntent">TripOverview</string>

    <!-- TRIP OVERVIEW -->
    <string name="ShowTripOnMapButtonText">Vis på kort</string>
    <string name="TripStatisticsButtonText">Statistik</string>
    <string name="TripStatisticsIntent">Statistik</string>
    <string name="TripOverviewLoadErrorText">Kunne ikke indlæse turoversigt</string>
    <string name="TripOverviewErrorGoBack">Gå tilbage</string>
    <string name="BaseCostText">Kilometer kørt:</string>
    <string name="BaseCostValue">%.1f km</string>
    <string name="EnvironmentText">Miljø &amp; trafik:</string>
    <string name="DrivingStyleText">Din kørsel:</string>
    <string name="TotalCostText">Din Tur:</string>
    <string name="CostPlusPercentage">(+%.1f%%) </string>
    <string name="CostMinusPercentage">(-%.1f%%)</string>
    <string name="CostPlusValue">+%.1f km</string>
    <string name="CostMinusValue">-%.1f km</string>
    <string name="MapDisplayIntent">MapDisplay</string>
    <string name="TripStartText">Tur startet:</string>
    <string name="TripEndText">Tur afsluttet:</string>
    <string name="TripPeriodTextFormat">HH:mm dd/MM/yyyy</string>
    <string name="SpeedMetricName">Hastighed</string>
    <string name="AccelerationMetricName">Acceleration</string>
    <string name="BrakeMetricName">Opbremsning</string>
    <string name="JerkMetricName">Ryk</string>
    <string name="RoadTypeMetricName">Vejtyper</string>
    <string name="CriticalTimeMetricName">Tidsperioder</string>

    <!-- TRIP STATISTICS -->
    <string name="DelinquencyOptimality">%.0f%%</string>
    <string name="DelinquencyCost">%.2f Dkr</string>
    <string name="DistancePerHundredText">%.1f km pr. 100 km</string>
    <string name="CountPerHundredText">%.1f pr. 100 km</string>
    <string name="RoadTypeText">Kørt mest på %s</string>
    <string name="CriticalTimeText">Kørt %s</string>
    <string name="SpeedText">%.1f km kørt for hurtigt</string>
    <string name="AccelerationCountText">%d forseelser</string>

    <!-- MAP DISPLAY -->
    <string name="MapDisplayLoadErrorText">Kunne ikke indlæse rute</string>

    <!-- COMPETITION LIST -->
    <string name="CompetitionListEmptyText">Der er ingen konkurrencer lige nu</string>
    <string name="CompetitionListLoadErrorText">Kunne ikke indlæse konkurrencer</string>
    <string name="CompetitionParticipateErrorText">Kunne ikke indlæse konkurrencer</string>
    <string name="LoadingCompetitionsText">Indlæser&#8230;</string>
    <string name="CompetitionIdIntentName">CompetitionId</string>
    <string name="EnterCompetitionText">Deltag</string>
    <string name="CompetitionAttemptCountText">%d forsøg</string>
    <string name="CompetitionRankText">%1$,d / %2$,d</string>
    <string name="CompetitionParticipantsDescription">%d deltagere</string>
    <string name="CompetitionDescriptionText">Antal deltagere: %d</string>
    <string name="UsernameSendErrorText">Kunne ikke gemme brugernavnet</string>
    <string name="CompetitionTimeLeftText">Sluttidspunkt: %s</string>
    <string name="CompetitionTimeLeftFormat">dd/MM HH:mm</string>
    <string name="CompetitionOverviewRankText">Din placering: %1$,d / %2$,d</string>
    <string name="CompetitionOverviewAvgScore">Gns. score: %.2f</string>
    <string name="LeaderboardAvgScore">%.2f</string>

    <string name="UsernameNotSetTitle">Vælg brugernavn</string>
    <string name="UsernameNotSetDescription">For at kunne deltage i konkurrencer skal du have et brugernavn</string>
    <string name="UsernameOk">OK</string>
    <string name="UsernameGoBack">Gå tilbage</string>
    <string name="UsernameTooShortError">Navnet er for kort</string>

    <!-- COMPETITION OVERVIEW -->
    <string name="CompetitionOverviewLoadErrorText">Kunne ikke indlæse konkurrencen</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="SettingsCategoryUser">Bruger</string>
    <string name="SettingsCategoryStorage">Lager</string>
    <string name="SettingsCategorySupport">Support</string>
    <string name="SettingsCategoryAbout">Om</string>

    <string name="UsernameTitle">Brugernavn til konkurrencer</string>
    <string name="UsernameDescription">Vælg&#8230;</string>
    <string name="UserLogoutTitle">Log ud</string>
    <string name="SyncOnlineSettingTitle">Gem ture online</string>
    <string name="SyncOnlineSettingDescription">Spar plads på din enhed og gem dine ture i skyen</string>
    <string name="DeleteAfterSettingTitle">Slet ture på enhed efter</string>
    <string name="HelpSettingTitle">Hjælp</string>
    <string name="FeedbackSettingTitle">Feedback</string>
    <string name="AboutSettingTitle">Om Drive-LaB</string>
    <string name="OnLogoutWhileTripActiveToast">Afslut venligst din tur før du logger ud</string>
    <string name="UnfinishedFeatureText">Denne feature kommer snart</string>

    <!-- TRIP SERVICE -->
    <string name="ServiceNotificationTitle">Drive-LaB</string>
    <string name="ServiceNotificationText">Din tur er aktiv</string>

    <string name="FailedTripPreferences">FailedTripPreferences</string>
    <string name="FailedTripStatus">FailedTripStatus</string>
    <string name="StoredTrips">StoredTrips</string>

    <string name="RoutePreferences">RoutePreferences</string>
    <string name="StoredRoute">StoredRoute</string>
    <string name="StoredRouteStart">StoredRouteStart</string>

    <!-- LOCATION LISTENER -->
    <string name="MovementNotificationTitle">Er din tur slut?</string>
    <string name="MovementNotificationText">Tryk her for at slutte din tur</string>

    <!-- STATUS BROADCAST -->
    <string name="BroadcastStatusIntent">StatusIntent</string>
    <string name="BroadcastIsConnected">IsConnected</string>
    <string name="BroadcastIsTripActive">IsTripActive</string>
    <string name="BroadcastIsProcessing">IsProcessing</string>
    <string name="BroadcastIsGPSActivated">IsGPSActivated</string>
    <string name="BroadcastLiveGpsIntent">LiveGpsIntent</string>
    <string name="BroadcastLiveGpsLocation">LiveGpsPosition</string>
    <string name="BroadcastRouteIntent">RouteIntent</string>

    <!-- DATE AND TIME -->
    <string name="TripDescriptionText">Kørt %s</string>
    <string name="TimeNow">lige nu</string>
    <string name="TimeMinutes">for %d minutter siden</string>
    <string name="TimeHour">for en time siden</string>
    <string name="TimeHours">for %d timer siden</string>
    <string name="TimeDay">i går</string>
    <string name="TimeTwoDays">i forgårs</string>
    <string name="TimeDays">for %d dage siden</string>
    <string name="TimeWeek">for en uge siden</string>
    <string name="TimeWeeks">for %d uger siden</string>
    <string name="TimeMonth">for en måned siden</string>
    <string name="TimeMonths">for %d måneder siden</string>
    <string name="TimeYear">for mere end et år siden</string>

    <!-- OTHER -->
    <string name="app_name">Drive-LaB</string>
    <string name="DefaultText">DefaultText</string>
</resources>
