<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/MainMenuButtonBar"
        style="?android:attr/buttonBarStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/TripOverviewButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/TripOverviewButtonTitle"/>

        <Button
            android:id="@+id/CompetitionsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/CompetitionsButtonTitle"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/MainMenuScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/MainMenuButtonBar"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ApplicationTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="36sp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/ApplicationLogoView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/ApplicationTitleView"
                android:layout_marginBottom="60dp"
                android:src="@drawable/drive_lab_icon"
                android:contentDescription="@string/LogoDescription"/>

            <Button
                android:id="@+id/TripButton"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/trip_button_start_shape"
                android:text="@string/TripButtonTitleStart"
                android:textSize="26sp"
                android:layout_below="@id/ApplicationLogoView"/>

            <RelativeLayout
                android:id="@+id/TripEndingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/TripButton"
                android:visibility="gone" >

                <ProgressBar
                    android:id="@+id/ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:indeterminate="true"/>

                <TextView
                    android:text="@string/TripStoppingText"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@id/ProgressBar"
                    android:layout_toLeftOf="@id/ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/LiveMapButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:enabled="false"
                android:text="@string/ActiveTripButtonTitle"
                android:layout_below="@id/TripButton"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
