<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TripOverviewActivity">

    <LinearLayout
        android:id="@+id/TripOverviewButtonBar"
        style="?android:attr/buttonBarStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/ShowTripOnMapButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ShowTripOnMapButtonText"/>

        <Button
            android:id="@+id/TripStatisticsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/TripStatisticsButtonText"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/TripOverviewScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/TripOverviewButtonBar">

        <RelativeLayout
            android:id="@+id/ScrollViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/TripTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp" >

                <TextView
                    android:id="@+id/TripTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DefaultText"
                    android:textSize="36sp"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/TripDescriptionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DefaultText"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/TripTitleView"/>

                <TextView
                    android:id="@+id/TotalCostView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DefaultText"
                    android:textSize="26sp"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/TripDescriptionView"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/CostLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TripTitleLayout"
                android:paddingBottom="20dp" >

                <LinearLayout
                    android:id="@+id/BaseCostLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/BaseCostTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/BaseCostText"/>

                    <TextView
                        android:id="@+id/BaseCostValueView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/EnvironmentLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/BaseCostLayout">

                    <TextView
                        android:id="@+id/EnvironmentCostTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/EnvironmentText"/>

                    <TextView
                        android:id="@+id/EnvironmentCostPercentageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>

                    <TextView
                        android:id="@+id/EnvironmentCostValueView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/DrivingStyleLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/EnvironmentLayout">

                    <TextView
                        android:id="@+id/DrivingStyleCostTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/DrivingStyleText"/>

                    <TextView
                        android:id="@+id/DrivingStyleCostPercentageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>

                    <TextView
                        android:id="@+id/DrivingStyleCostValueView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>

                </LinearLayout>

                <View
                    android:id="@+id/CostLayoutDivider"
                    android:layout_below="@id/DrivingStyleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:id="@+id/TotalCostLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/CostLayoutDivider">

                    <TextView
                        android:id="@+id/TotalCostTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/TotalCostText"/>

                    <TextView
                        android:id="@+id/TotalCostPercentageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>

                    <TextView
                        android:id="@+id/TotalCostValueView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>

                </LinearLayout>

            </RelativeLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/PieChartView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@id/CostLayout" />

            <RelativeLayout
                android:id="@+id/TripTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/PieChartView"
                android:paddingTop="20dp">

                <LinearLayout
                    android:id="@+id/TripStartTimeLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TripStartTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/TripStartText"/>

                    <TextView
                        android:id="@+id/TripStartValueView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/TripEndTimeLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TripStartTimeLayout">

                    <TextView
                        android:id="@+id/TripEndTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/TripEndText"/>

                    <TextView
                        android:id="@+id/TripEndValueView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:text="@string/DefaultText"/>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
